@@ -121,7 +121,6 @@ export("CVforPCF")
 export("dclf.progress")
 export("dclf.sigtrace")
 export("dclf.test")
-export("densityAdaptiveKernel")
 export("densityAdaptiveKernel.ppp")
 export("densityAdaptiveKernel.ppplist")
 export("densityAdaptiveKernel.splitppp")
