@@ -9,4 +9,4 @@ date version nhelpfiles nobjects ndatasets Rlines srclines
 "2023-10-22" "3.2-5" 236 524 0 31769 6365
 "2024-01-31" "3.2-6" 241 535 0 32147 6365
 "2024-03-21" "3.2-7" 241 535 0 32149 6365
-"2024-06-03" "3.2-7.004" 230 516 0 31570 6365
+"2024-06-04" "3.2-7.005" 230 515 0 31566 6365
